# TU-Delft-DCC.github.io

./: .buildinfo  .gitignore  01_Demo.html  02_Demo.html  README.html  genindex.html  objects.inv  search.html  searchindex.js
_sources/: 01_Demo.md  02_Demo.md
agent/: README.md  build_index.py  guides.py  indexer.py  parser_quarto.py  pyproject.toml  test_dataset.json
agent/src/guia/: indexer.py  parser_quarto.py  server.py
agent/src/guia/evaluation/: e2e_evaluation.py  perfomance_monitor.py  retrieval_metrics.py  runner.py  test_dataset.json  test_dataset.py
agent/src/guia/utils/: build_index.py
